# crewai-hacktoberfest

./: README.md  pyproject.toml
system_experts/: README.md  pyproject.toml
system_experts/knowledge/: user_preference.txt
system_experts/knowledge/ti_vpn/: vpn_fluxo_basico.txt
system_experts/knowledge/viagem/: sgv_fluxo_basico.txt
system_experts/src/: main.py  utils.py
system_experts/src/system_experts/: crew.py  main.py
system_experts/src/system_experts/config/: agents.yaml  tasks.yaml
