[project]
name = "system_experts"
version = "0.1.0"
description = "system_experts using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
system_experts = "system_experts.main:run"
run_crew = "system_experts.main:run"
train = "system_experts.main:train"
replay = "system_experts.main:replay"
test = "system_experts.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
